[gd_scene load_steps=3 format=3 uid="uid://dmar8vx1wexmk"]

[ext_resource type="Script" path="res://scripts/PauseGame.gd" id="1_50tma"]
[ext_resource type="Theme" uid="uid://b3p4rdybxkytw" path="res://ui/ui_theme.tres" id="2_uv6c1"]

[node name="pause_game" type="Node2D"]
script = ExtResource("1_50tma")

[node name="PauseMenuPanel" type="Panel" parent="."]
offset_right = 200.0
offset_bottom = 120.0
theme = ExtResource("2_uv6c1")

[node name="TitleLabel" type="Label" parent="PauseMenuPanel"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 30.0
theme = ExtResource("2_uv6c1")
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="PauseMenuPanel"]
layout_mode = 0
offset_left = 43.0
offset_top = 32.0
offset_right = 157.0
offset_bottom = 63.0
theme = ExtResource("2_uv6c1")
text = "CONTINUE"

[node name="QuitButton" type="Button" parent="PauseMenuPanel"]
layout_mode = 0
offset_left = 43.0
offset_top = 76.0
offset_right = 157.0
offset_bottom = 107.0
theme = ExtResource("2_uv6c1")
text = "QUIT"

[connection signal="pressed" from="PauseMenuPanel/ContinueButton" to="." method="continue_game"]
[connection signal="pressed" from="PauseMenuPanel/QuitButton" to="." method="quit_game"]
